# us-claw

./: .gitignore  LICENSE  README.md
.ai/memory/: us-claw-control-plane-design-memory.md  us-claw-review-followups-20260403-memory.md  us-claw-runtime-phase-b-memory.md  us-federal-soul-conversation-record.md
.ai/plans/: us-claw-control-plane-implementation-plan.md  us-claw-review-followups-20260403-plan.md  us-claw-runtime-phase-b-plan.md  us-federal-soul-execution-backlog.md  us-federal-soul-phase3-final-plan.md
agents/: README.md
apps/control-plane/: README.md  pyproject.toml
apps/control-plane/app/: __init__.py  main.py
apps/control-plane/app/api/: __init__.py  dashboard.py  health.py  organization.py  runtime.py  tasks.py
apps/control-plane/app/domain/: __init__.py  org_models.py  task_state.py
apps/control-plane/app/services/: __init__.py  dashboard_summary.py  runtime_gateway.py  soul_catalog.py  task_store.py
apps/control-plane/tests/: README.md  test_bootstrap_scripts.py  test_dashboard_api.py  test_health.py  test_organization_api.py  test_runtime_api.py  test_runtime_gateway.py  test_soul_catalog.py  test_tasks_api.py
deploy/: README.md  control-plane.Dockerfile  docker-compose.yml  openclaw-bridge.Dockerfile  web.Dockerfile
docs/: README.md  us-federal-soul-coverage-matrix.md  us-federal-soul-department-qc-sampling.md  us-federal-soul-docs-architecture.md  us-federal-soul-index.md  us-federal-soul-reference-levels.md
scripts/: README.md  bootstrap-us-claw.ps1  bootstrap-us-claw.sh  install-openclaw.ps1  install-openclaw.sh
(+369 files in other folders)
