[project]
name = "us-claw-control-plane"
version = "0.1.0"
description = "Control plane API for the US Claw organization-driven multi-agent runtime."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
